// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`placeholder screens renders About placeholder (dark + light) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#0A0E14",
      "flex": 1,
    }
  }
  testID="about-screen"
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 8,
            "justifyContent": "center",
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#E6EDF3",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "600",
              "letterSpacing": 0,
              "lineHeight": 28,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        about.title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        placeholder.aboutBody
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`placeholder screens renders About placeholder (dark + light) 2`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#F4F6F9",
      "flex": 1,
    }
  }
  testID="about-screen"
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 8,
            "justifyContent": "center",
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#1F2937",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "600",
              "letterSpacing": 0,
              "lineHeight": 28,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        about.title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        placeholder.aboutBody
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`placeholder screens renders Settings placeholder (dark + light) 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#0A0E14",
      "flex": 1,
    }
  }
  testID="settings-screen"
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 8,
            "justifyContent": "center",
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#E6EDF3",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "600",
              "letterSpacing": 0,
              "lineHeight": 28,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        settings.title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#8B949E",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        placeholder.settingsBody
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`placeholder screens renders Settings placeholder (dark + light) 2`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "additive",
    }
  }
  style={
    {
      "backgroundColor": "#F4F6F9",
      "flex": 1,
    }
  }
  testID="settings-screen"
>
  <View
    style={
      [
        {
          "flex": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "column",
            "gap": 8,
            "justifyContent": "center",
          },
          {
            "flex": 1,
          },
        ]
      }
    >
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#1F2937",
              "fontFamily": "System",
              "fontSize": 22,
              "fontWeight": "600",
              "letterSpacing": 0,
              "lineHeight": 28,
              "textAlign": "auto",
            },
            undefined,
          ]
        }
      >
        settings.title
      </Text>
      <Text
        allowFontScaling={true}
        style={
          [
            {
              "color": "#4B5563",
              "fontFamily": "System",
              "fontSize": 16,
              "fontWeight": "400",
              "letterSpacing": 0,
              "lineHeight": 22,
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        placeholder.settingsBody
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;
